--- a/notemate-frontend/src/App.css
+++ b/notemate-frontend/src/App.css
@@ -1,42 +1,37 @@
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,400&display=swap");
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html{
+  font-size: 62.5%;
+}
+
+html, body{
+  overflow-x: hidden;
+}
+:root{
+  --color-blue-dark: #0c0c22;
+  --color-blue-light: #0b2056;
+  --heading-color: #232f55;
+  --texts-color: #9da1a7;
+  --color-secondary: #f069a8;
+  --color-white: #fff;
+}
+
+body{
+  font-family: 'Mulish', sans-serif;
+  font-weight: 200;
+  font-size: 1.6rem;
+  color: var(--texts-color);
+}
+
+
 #root {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
