start creating the her section

--- a/notemate-frontend/src/App.css
+++ b/notemate-frontend/src/App.css
@@ -28,6 +28,7 @@ body{
   font-weight: 200;
   font-size: 1.6rem;
   color: var(--texts-color);
+  position: relative;
 }
 
 
@@ -35,3 +36,7 @@ body{
   max-width: 1440px;
   margin: 0 auto;
 }
+
+/* .app{
+  position: relative;
+} */
