--- a/notemate-frontend/src/components/LandingNav/LandingNav.css
+++ b/notemate-frontend/src/components/LandingNav/LandingNav.css
@@ -4,6 +4,10 @@
     justify-content: space-around;
     background: linear-gradient(to right, #00095e 0%, #0c0c1f 100%);
     color: var(--color-white);
+    /* position: fixed;
+    top: 0;
+    left: 0; */
+    width: 100%;
 }
 
 .landing-nav__nav-list{
