make landing page responsive

--- a/notemate-frontend/src/App.css
+++ b/notemate-frontend/src/App.css
@@ -11,6 +11,30 @@ html {
   font-size: 62.5%;
 }
 
+@media screen and (max-width: 1000px) {
+  html{
+    font-size: 60%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  html{
+    font-size: 55%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  html{
+    font-size: 52%;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  html{
+    font-size: 50%;
+  }
+}
+
 html,
 body {
   overflow-x: hidden;
