--- a/notemate-frontend/src/components/About/About.css
+++ b/notemate-frontend/src/components/About/About.css
@@ -25,3 +25,17 @@
   line-height: 2;
   font-weight: 500;
 }
+
+@media screen and (max-width: 1100px) {
+  .about__container{
+    width: 98vw;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .about__container{
+    width: 100vw;
+    padding: 1rem;
+    flex-direction: column;
+  }
+}
