--- a/notemate-frontend/src/components/LandingNav/LandingNav.css
+++ b/notemate-frontend/src/components/LandingNav/LandingNav.css
@@ -4,10 +4,31 @@
   justify-content: space-around;
   background: linear-gradient(to right, #00095e 0%, #0c0c1f 100%);
   color: var(--color-white);
-  /* position: fixed;
-    top: 0;
-    left: 0; */
   width: 100%;
+  position: relative;
+}
+
+.menu-icon{
+  --size: 8rem;
+  width: var(--size);
+  height: var(--size);
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  background-color: var(--color-secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  display: none;
+  transition: all 1s ease;
+}
+
+.menu-icon svg{
+  --size: 5rem;
+  width: var(--size);
+  height: var(--size);
 }
 
 .landing-nav__nav-list {
@@ -79,4 +100,43 @@
 
 .landing-nav__cta-btn-sec:hover {
   color: var(--color-secondary);
+}
+
+@media screen and (max-width: 600px) {
+  .landing-nav__nav-list{
+    flex-direction: column;
+  }
+
+  .menu-icon{
+    display: flex;
+  }
+
+  .landing-nav__nav{
+    position: absolute;
+    top: 15vh;
+    right: 5px;
+    background-color: var(--color-secondary);
+    padding: 3rem .5rem;
+    height: 100vh;
+    width: 100vw;
+    transition: all 1s ease;
+    z-index: 10;
+  }
+
+  .landing-nav-abs{
+    transition: all 1s ease;
+  }
+
+  .landing-nav-abs{
+    position: absolute;
+    top: 15vh;
+    transform: translateX(900px);
+    z-index: 10;
+  }
+
+  .landing-nav__header{
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+  }
 }
