--- a/notemate-frontend/src/App.css
+++ b/notemate-frontend/src/App.css
@@ -69,6 +69,7 @@ body {
   display: grid;
   grid-template-columns: .3fr .6fr;
   align-content: center;
+  align-items: center;
   margin-bottom: 3rem;
 }
 
@@ -135,4 +136,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.editor{
+  min-height: 100vh;
+}
+
+.editing-area{
+  min-height: 80vh;
+  background-color: #777;
 }
