--- a/notemate-frontend/src/components/About/About.css
+++ b/notemate-frontend/src/components/About/About.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 85vw;
+  width: 85%;
   margin: 3rem auto;
   padding: 3rem;
 }
