--- a/notemate-frontend/src/pages/Login/Login.css
+++ b/notemate-frontend/src/pages/Login/Login.css
@@ -1,4 +1,4 @@
-.sign-up-container {
+.log-in-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,6 +12,6 @@
   min-height: 100vh;
 }
 
-.sign-up-form {
+.log-in-form {
   width: 80%;
 }
