--- a/notemate-frontend/src/App.css
+++ b/notemate-frontend/src/App.css
@@ -12,25 +12,25 @@ html {
 }
 
 @media screen and (max-width: 1000px) {
-  html{
+  html {
     font-size: 60%;
   }
 }
 
 @media screen and (max-width: 900px) {
-  html{
+  html {
     font-size: 55%;
   }
 }
 
 @media screen and (max-width: 800px) {
-  html{
+  html {
     font-size: 52%;
   }
 }
 
 @media screen and (max-width: 680px) {
-  html{
+  html {
     font-size: 50%;
   }
 }
@@ -65,15 +65,15 @@ body {
   position: relative;
 } */
 
-.form-group{
+.form-group {
   display: grid;
-  grid-template-columns: .3fr .6fr;
+  grid-template-columns: 0.3fr 0.6fr;
   align-content: center;
   align-items: center;
   margin-bottom: 3rem;
 }
 
-.form-group-lable{
+.form-group-lable {
   font-weight: bold;
   color: var(--color-blue-light);
   text-transform: capitalize;
@@ -81,13 +81,13 @@ body {
   color: var(--color-white);
 }
 
-.form-guide{
+.form-guide {
   color: var(--color-blue-light);
   font-weight: bold;
   color: var(--color-white);
 }
 
-.form-text-input{
+.form-text-input {
   padding: 1.5rem 2rem;
   border-radius: 5px;
   caret-color: var(--color-secondary);
@@ -95,17 +95,17 @@ body {
   border: none;
 }
 
-.form-text-input::placeholder{
+.form-text-input::placeholder {
   text-transform: capitalize;
   font-weight: bold;
 }
 
-.form-guide a{
+.form-guide a {
   text-transform: capitalize;
   color: var(--color-white);
 }
 
-.form-btn{
+.form-btn {
   padding: 2rem 4rem;
   border: none;
   outline: none;
@@ -119,7 +119,7 @@ body {
   margin-bottom: 1rem;
 }
 
-.form-page-title{
+.form-page-title {
   margin-bottom: 2rem;
   color: var(--color-blue-dark);
   text-transform: capitalize;
@@ -127,22 +127,22 @@ body {
   color: var(--color-white);
 }
 
-.form-back{
+.form-back {
   font-weight: bold;
   color: var(--color-white);
 }
 
-.form-bottom-controls{
+.form-bottom-controls {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.editor{
+.editor {
   min-height: 100vh;
 }
 
-.editing-area{
+.editing-area {
   min-height: 80vh;
   background-color: #777;
 }
