--- a/notemate-frontend/src/components/NotesPreview/NotesPreview.css
+++ b/notemate-frontend/src/components/NotesPreview/NotesPreview.css
@@ -3,7 +3,9 @@
   margin: 2rem auto;
   padding: 1rem;
   box-shadow: 0 0 0 1px rgba(14, 19, 24, 0.07), 0 2px 8px rgba(14, 19, 24, 0.25);
-  display: flex;
+  /* display: flex; */
+  display: grid;
+  grid-template-columns: .1fr .9fr;
   border-radius: 5px;
 }
 
@@ -62,6 +64,7 @@
   align-items: center;
   margin-top: 2rem;
   justify-content: space-between;
+  width: 100%!important;
 }
 
 .notes-controls__control {
