implement opening notes in new page for full read

--- a/notemate-frontend/src/components/UserNote/UserNote.css
+++ b/notemate-frontend/src/components/UserNote/UserNote.css
@@ -44,7 +44,8 @@
   align-items: center;
 }
 
-.user-note__controls button {
+.user-note__controls__button {
+  text-decoration: none;
   display: flex;
   align-items: center;
   border: none;
