--- a/notemate-frontend/src/components/NotesPreview/NotesPreview.css
+++ b/notemate-frontend/src/components/NotesPreview/NotesPreview.css
@@ -58,6 +58,23 @@
   color: var(--color-blue-dark);
   font-weight: 500;
   margin-bottom: 1rem;
+  max-height: 25rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.notes-preview__body-preview::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  background: rgba(255, 255, 255, 0);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2.7px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .notes-controls {
