--- a/notemate-frontend/src/components/NotesPreview/NotesPreview.css
+++ b/notemate-frontend/src/components/NotesPreview/NotesPreview.css
@@ -10,6 +10,13 @@
   border-radius: 5px;
 }
 
+@media screen and (max-width: 850px) {
+  .notes-preview {
+    width: 98vw !important;
+    margin: 2rem auto;
+  }
+}
+
 .notes-preview__avartar {
   --size: 6rem;
   width: var(--size);
